Updated demo apps
Updated java demo apps with core version 0.0.2

--- a/java-demo/order-service/pom.xml
+++ b/java-demo/order-service/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>com.autogentmcp</groupId>
       <artifactId>mcp-core-java</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>0.0.2</version>
     </dependency>
   </dependencies>
   <build>
