--- a/java-demo/order-service/src/main/resources/application.properties
+++ b/java-demo/order-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8081
-autogentmcp.base-domain=http://localhost:8081
-autogentmcp.app-healthcheck-endpoint=http://localhost:8081/health
-autogentmcp.security={"type":"api_key","header":"X-API-KEY","secret_ref":"myapp_api_key"}
+autogentmcp.app-healthcheck-endpoint=/health
 autogentmcp.registry-url=http://localhost:8000
-autogentmcp.api-key=9e2b7c1e-4f3a-4b8e-9c2d-7a1e5b6c8d2f
+autogentmcp.api-key=mcp_key_g28WUNmXwRz2XVYPuTqqAJG1cDtPKJvtKllNW9LsiZwC
+autogentmcp.environment=production
