--- a/java-demo/weather-service/pom.xml
+++ b/java-demo/weather-service/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>com.autogentmcp</groupId>
       <artifactId>mcp-core-java</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>0.0.2</version>
     </dependency>
   </dependencies>
   <build>
